# ocean

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.c
